--- a/store/src/main/resources/application.yml
+++ b/store/src/main/resources/application.yml
@@ -1,20 +1,34 @@
 server:
   port: 5000
+  compression:
+    enabled: true
+    min-response-size: 1024
+  shutdown: graceful
 spring:
+  profiles:
+    active: dev
   datasource:
     url: jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: update
   batch:
     initialize-schema: always
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
+  flyway:
+    baseline-on-migrate: true
 
 product:
   image: C:\Users\szela\Desktop\java\store-images
 
 ---
+server:
+  port: 8080
 spring:
   profiles: dev
   datasource:
